loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: loki
  labels:
    app: loki
spec:
  type: ClusterIP
  ports:
  - port: 3100
    targetPort: http
    protocol: TCP
    name: http
  - port: 9096
    targetPort: grpc
    protocol: TCP
    name: grpc
  selector:
    app: loki
